changed overflow issue and changed cta link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+  max-width: 100%;
+  overflow-x: hidden; }
+
 .call-to-action-jumbotron {
   font-size: 70px;
   margin-bottom: 10px; }
